public/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.page {
    background-color: #FBF5E5;
    font: 20px Helvetica, Arial;
}
.page.login {
    background-color: #E6B5B3;
}

@keyframes fadeOut {
    0% { opacity: 1; }
    80% { opacity: 1; }
    100% { opacity: 0; }
}
#splash {
    z-index: 1;
    position: absolute;
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #E6B5B3;
    opacity: 0;
    animation-duration: 3s;
    animation-name: fadeOut;
}

.main-wrapper {
    display: flex;
    flex-direction: column;
    max-width: 500px;
    min-height: 100vh;
    margin: auto;
}

.main-wrapper.open-menu {
    overflow: hidden;
    position: fixed;
    top: 0;
}

.main-wrapper .header {
    text-align: center;
    margin-top: 3em;
}

.main-wrapper .main {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
    justify-content: center;
}

img {
    max-width: 100%;
}
.chat-wrapper {
    width: 100%;
}
form {
    padding: 3px;
    bottom: 0;
}
form #m {
    border: 0;
}
form button {
    border: none;
    padding: 10px;
    font-size: 1rem;
}
#messages {
    height: 50vw;
    width: 100%;
    background-color: white;
    position: relative;
    display: block;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow-y: scroll !important;
}
#messages li {
    padding: 5px 10px;
    display: block;
}
#messages li:nth-child(odd) {
    background: #eee;
}

.narrow-wrapper {
    width: 100%;
    max-width: 20rem;
}

#loginform {
    
}
#loginform label {
    display: block;
    position: absolute;
}
#loginform input {
    width: 100%;
    height: 30px;
    margin-bottom: 20px;
    background-color: transparent;
    border: none;
    border-bottom: solid 2px #2D2D2D;
}
#loginform button {
    border: none;
    padding: 10px;
    font-size: 1rem;
}

.forgot-password {
    display: block;
}
.new-user {
    display: block;
    text-align: center;
    margin-top: 4em;
}

.countdown .countdown-toggler {
    position: absolute;
    top: 1rem;
    left: 1rem;
    z-index: 2;
    border: none;
    width: 3rem;
    height: 3rem;
    overflow: hidden;
    color: transparent;
    background-color: transparent;
}

.countdown .container {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    width: 100vw;
    overflow-y: scroll !important;
    background-color: #E9DCD3;
    transition: all 0.5s ease 0s;
    transform: translate3d(-100%, 0px, 0px);
}

.countdown.open .container {
    transform: translate3d(0%, 0px, 0px);
}

.countdown.open .container .content {
    width: 80%;
    text-align: right;
    line-height: 2.5;
    margin-top: 8rem;
}

.countdown.open ~ .page-container {
    transform: translate3d(100%, 0px, 0px);
}

.main-nav .nav-toggler {
    position: absolute;
    top: 1rem;
    right: 1rem;
    z-index: 2;
    border: none;
    width: 3rem;
    height: 3rem;
    overflow: hidden;
    color: transparent;
    background-color: transparent;
    cursor: pointer;
}

.main-nav .container {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    width: 100vw;
    overflow-y: scroll !important;
    background-color: #E9DCD3;
    transition: all 0.5s ease 0s;
    transform: translate3d(100%, 0px, 0px);
}

.main-nav .container .nav-list {
    width: 80%;
    text-align: right;
    line-height: 2.5;
    margin-top: 8rem;
}

.main-nav.open .container {
    transform: translate3d(0%, 0px, 0px);
}


.page-container {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    width: 100vw;
    overflow-y: scroll !important;
    transition: all 0.5s ease 0s;
    transform: translate3d(0%, 0px, 0px);
}

.main-nav.open ~ .page-container {
    transform: translate3d(-100%, 0px, 0px);
}

.profile-image-wrapper {
    width: 8rem;
    height: 8rem;
    display: block;
    margin: auto;
    border-radius: 50%;
    overflow: hidden;
}
.profile-image-wrapper img {
    width: inherit;
    height: inherit;
    object-fit: cover;
}

.visually-hidden { 
    position: absolute !important;
    height: 1px; 
    width: 1px;
    overflow: hidden;
    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
    clip: rect(1px, 1px, 1px, 1px);
    white-space: nowrap; /* added line */
}

